# software

./: CMakeLists.txt  README.md
Incrabyte/: CMakeLists.txt  Encoder.cpp  Incrabyte.cpp  Incrabyte.h  main.cpp
